namespaces/live-1.cloud-platform.service.justice.gov.uk/kube-ops/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-ops
  namespace: kube-ops
  labels:
    application: kube-ops
    version: v0.10
spec:
  replicas: 1
  selector:
    matchLabels:
      application: kube-ops
  template:
    metadata:
      labels:
        application: kube-ops
        version: v0.10
    spec:
      serviceAccount: kube-ops
      containers:
      - name: service
        # see https://github.com/hjacobs/kube-ops-view/releases
        image: hjacobs/kube-ops-view:0.10
        args:
        # remove this option to use built-in memory store
        - --redis-url=redis://kube-ops-redis:6379
        ports:
        - containerPort: 8080
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 5
          timeoutSeconds: 1
        resources:
          limits:
            cpu: 200m
            memory: 100Mi
          requests:
            cpu: 50m
            memory: 50Mi
        volumeMounts:
        - name: auth-secrets
          mountPath: "/etc/secrets"
          readOnly: true
        securityContext:
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 1000
      volumes:
      - name: auth-secrets
        secret:
          secretName: kube-ops-oidc
